# terminal

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  config.toml.example  package-lock.json  package.json  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.omc/sessions/: 25796e2a-24af-4eb2-a772-c7a3fe14edbc.json  37184fda-3cb3-44f0-a7dd-36fe754e75ae.json
.omc/state/: agent-replay-ad0cc3d5-3ebd-4547-b329-faee305119c4.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  mission-state.json  subagent-tracking.json
android/: README.md  build-rust-jni.ps1  build-rust-jni.sh  fdroid-version.properties  settings.gradle.kts  smoke-fdroid-metadata.ps1  smoke-fdroid-release-activation.ps1  smoke-github-signing-secrets.ps1  smoke-release-signing.ps1
android/app/: build.gradle.kts
android/fdroiddata/metadata/: dev.aiterminal.android.yml
desktop/: .gitignore  index.html  package-lock.json  package.json
desktop/scripts/: package-windows-portable.mjs  setup-wsl-nsis.sh  stage-windows-sidecars.mjs
desktop/src/: main.ts  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.example.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/permissions/: terminal.toml
desktop/src-tauri/src/: main.rs
docs/: HANDOFF.md  HISTORY.md  INSTALL.md  MVP-ENTRY.md  PRD.md  RULES.md  TASK.md  TROUBLESHOOTING.md  WORKFLOW.md
docs/releases/: README.md  release-followup-runbook.md  v0.3.3-release-body.md
docs/superpowers/plans/: 2026-06-03-audit-non-ran-outcomes.md  2026-06-03-central-execution-pipeline.md  2026-06-03-gateway-semantic-cache.md  2026-06-03-pty-streaming-cancel.md  2026-06-03-redirect-backup-parsing.md  2026-06-03-safe-preview-render.md  2026-06-03-unified-dispatcher.md  2026-06-04-gateway-budget-gate.md  2026-06-04-phase1-usability-gaps.md  2026-06-04-phase2-followups.md  2026-06-04-remote-approval-m0-intercept.md  2026-06-05-independent-shell-s0.md  2026-06-05-independent-shell-s1a.md  2026-06-05-independent-shell-s1b1.md  2026-06-05-r0-release.md  2026-06-23-platform-mobile-local-terminal-workflow.md  2026-06-26-windows-ash-s1-config-loading.md  2026-06-26-windows-ash-s2-safety-gate.md  2026-06-26-windows-ash-s3-line-editor.md  2026-06-27-ai-usage-source-review.md  2026-06-27-ash-ai-usage-recording.md  2026-06-27-priority-execution.md  2026-06-27-verification-pending-package.md  2026-06-27-verification-resume-runbook.md  2026-06-27-windows-ash-manual-verification.md  2026-06-27-windows-ash-real-ai-provider.md  2026-06-27-windows-ash-s2-audit-followup.md  2026-06-27-windows-ash-s4-history.md  2026-06-27-windows-ash-s5-ai-integration.md  2026-06-27-windows-ash-s6-msys-bridge.md  2026-06-27-windows-gui-terminal-s0-s1.md  2026-06-28-windows-gui-visual-smoke-evidence.md  2026-07-01-android-signing-workflow-gate.md  2026-07-01-fdroid-build-evidence-gate.md  2026-07-01-msi-build-evidence-gate.md  2026-07-01-ra-pwa-live-approval-bridge.md  2026-07-01-ra-pwa-live-browser-capture-unblock.md  2026-07-01-ra-pwa-live-companion-next.md  2026-07-01-ra-pwa-live-e2e-evidence.md  2026-07-01-ra-pwa-live-loopback-endpoint.md  (+14 more)
docs/superpowers/specs/: 2026-06-03-audit-non-ran-outcomes-design.md  2026-06-03-central-execution-pipeline-design.md  2026-06-04-bash-cwd-hook-design.md  (+42 more)
pwa/: app.mjs  app.test.mjs  index.html  manifest.webmanifest  styles.css  sw.js
scripts/: build-matrix.sh  check-release-followup.ps1  install.ps1  install.sh  show-release-followup-status.ps1  smoke-gui.ps1  smoke-msi-preflight.ps1  smoke-nsis.ps1  smoke-pwa-live-approval.ps1  smoke-pwa-live-browser-evidence.mjs  smoke-pwa-live-browser-preflight.ps1  smoke-release-followup-preflight.ps1  smoke-release-followup-status.ps1  smoke.ps1
src/: ai_router.rs  ai_usage.rs  aitask.rs  approval.rs  cache.rs  cmdparse.rs  config.rs  context.rs  daemon.rs  device_registry.rs  diff.rs  dispatch.rs  explain.rs  gate.rs  gated_runner.rs  gateway.rs  guardrails.rs  http.rs  index.rs  intent.rs  lib.rs  line_editor.rs  lock.rs  main.rs  mask.rs  mcp.rs  mobile.rs  mobile_jni.rs  ollama.rs  openai.rs  pairing.rs  pipeline.rs  planner.rs  policy.rs  preview.rs  provider.rs  pty.rs  qr.rs  remote.rs  responder.rs  (+14 more)
src/shellcore/: ast.rs  builtins.rs  engine.rs  external.rs  format.rs  lexer.rs  mod.rs  msys.rs  ops.rs  parser.rs  repl.rs  util.rs  value.rs  winexec.rs
tests/: integration.rs  intercept_e2e.rs  version_sync.rs
(+32 files in other folders)
