[package]
name = "ai-terminal"
version = "0.3.2"
edition = "2021"
rust-version = "1.74"
description = "AI CLI 통합 리눅스 터미널 — 일반 셸 호환 + 안전한 AI 보조 (설계 v3.3)"
license = "MIT OR Apache-2.0"
repository = ""
default-run = "ai"

[lib]
crate-type = ["rlib", "cdylib"]

# 진입점: `ai` CLI 단일 바이너리 (설계 §9, §31)
[[bin]]
name = "ai"
path = "src/main.rs"

[[bin]]
name = "ash"
path = "src/bin/ash.rs"

[features]
default = []
# `storage` 는 rusqlite(bundled SQLite) 를 켠다. C 컴파일러가 필요하므로
# Linux/WSL/CI 또는 MSVC/MinGW C 툴체인이 있는 환경에서 활성화한다.
#   cargo build --features storage
storage = ["dep:rusqlite"]
# `tls` 는 HTTPS 클라우드 provider 용 TLS transport(tokio-rustls/ring)를 켠다.
# rustls crypto provider(ring)가 C 컴파일러를 요구하므로 storage 와 마찬가지로 게이트한다.
#   cargo build --features tls
tls = ["dep:tokio-rustls", "dep:webpki-roots"]
# `remote` 는 원격 승인 크립토 코어(Noise 핸드셰이크 + Ed25519 서명)를 켠다.
# snow default resolver·ed25519-dalek 모두 순수 Rust라 C 컴파일러는 불필요하나,
# 코어 바이너리 경량화·빌드 매트릭스 명시를 위해 게이트한다(§M0.5).
#   cargo build --features remote
remote = ["dep:snow", "dep:ed25519-dalek", "dep:getrandom"]

[dependencies]
# --- CLI / 설정 / 로깅 (순수 Rust, 모든 플랫폼 빌드 가능) ---
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
regex = "1"
jni = "0.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# --- async 런타임 (순수 Rust, 모든 타깃) ---
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "signal", "sync", "net"] }

# --- 저장소 (C 컴파일러 필요 → feature 게이트) ---
rusqlite = { version = "0.32", features = ["bundled"], optional = true }

# --- TLS transport (C 컴파일러 필요 → `tls` feature 게이트) ---
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"], optional = true }
webpki-roots = { version = "0.26", optional = true }

# --- 원격 승인 크립토 (순수 Rust, `remote` feature 게이트) ---
snow = { version = "0.9", optional = true }
ed25519-dalek = { version = "2", optional = true }
getrandom = { version = "0.2", optional = true }

# --- 데스크톱 TUI/PTY 스택 ---
# android 타깃에서는 제외한다. `portable-pty` → `serial` → `serial-unix` → `termios`
# 체인의 `termios`가 android를 지원하지 않아 JNI cdylib 빌드를 깨뜨린다. 이 의존들은
# `ui.rs`/`pty.rs`(둘 다 `cfg(not(target_os = "android"))` 게이트)에서만 쓰이므로
# 타깃 게이트로 옮겨도 데스크톱 빌드에 영향이 없다.
[target.'cfg(not(target_os = "android"))'.dependencies]
ratatui = "0.29"
crossterm = "0.28"
portable-pty = "0.8"
reedline = "0.48.0"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
