[package]
name = "ai-terminal-desktop"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
